LZONES: Working commit for testing and switch machines

--- a/Tools/debug/openocd.cfg
+++ b/Tools/debug/openocd.cfg
@@ -4,7 +4,7 @@
 source [find interface/stlink-v2.cfg]
 # replace the stm32f4x with the right value for
 # your microcontroller
-source [find target/stm32f4x.cfg]
+source [find target/stm32h7x_dual_bank.cfg]
 init
 $_TARGETNAME configure -rtos auto
 
